Bug 76597 - Spacing between paragraph is not preserved
Summary: Spacing between paragraph is not preserved
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Rohit Deshmukh
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-25 14:11 UTC by Dinesh
Modified: 2014-04-17 11:00 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file contains text and image (81.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-25 14:11 UTC, Dinesh
Details
"Spacing between paragraph is not preserved.png" shows that all spacing between paragraph being roundtriped correctly (164.66 KB, image/png)
2014-04-17 10:57 UTC, darshan.gandhi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-03-25 14:11:57 UTC
Created attachment 96368 [details]
file contains text and image

Problem description: 
Spacing between paragraph is not preserved after RT

Steps to reproduce:
1. Open the file in LO
2. Save the file as docx
3. Open the file in MS Office

Current behavior:
The spacing between paragraph is not preserved after RT i.e. in RT file spacing is more compared to original file.

Expected behavior:
The round-tripped file should be visually same as that of the original i.e all the information should be preserved.
Comment 1 Jorendc 2014-03-25 18:47:48 UTC
I can confirm that behavior, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: aeab0183e86fe011d32058864c02b2de4da32dc9
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-24_05:49:57

Kind regards,
Joren
Comment 2 Kevin Suo 2014-04-05 13:29:40 UTC
From here:
https://gerrit.libreoffice.org/#/c/8842/

It seems that bug 48350 is related (or same) to this bug. Added to see also.
Comment 3 Commit Notification 2014-04-11 07:53:36 UTC
Rohit Deshmukh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05c5da4c376d676ff89cd40dd0dea9eeb4bc1e75

fdo#76597: Fix preservation issue of Spacing between paragraph



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 darshan.gandhi 2014-04-17 10:57:01 UTC
Created attachment 97505 [details]
"Spacing between paragraph is not preserved.png" shows that all spacing between paragraph being roundtriped correctly
Comment 5 darshan.gandhi 2014-04-17 11:00:10 UTC
Closing this issue as its not reproducible in latest LO Master dated 17th April 2014.